# SudoLinkbot

./: README.md  pyproject.toml  requirements.txt  start_all
docs/: plan.md
sudolink/: __init__.py  __main__.py  config.py  exceptions.py  types.py
sudolink/bot/: app.py  handlers.py
sudolink/core/: link_extractor.py  meta_fetcher.py  result_curator.py
sudolink/services/: ai_expansion.py  link_service.py
sudolink/ui/: formatter.py
